// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup /> <RadioGroup.Radio /> Snapshots should match snapshot with default radio 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback
    disabled={false}
  >
    <View
      checked={false}
      disabled={false}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderColor": "#A9A9B8",
            "borderRadius": 9999,
            "borderStyle": "solid",
            "borderWidth": 2,
            "height": 20,
            "justifyContent": "center",
            "width": 20,
          },
          Object {},
        ]
      }
    >
      <View
        checked={false}
        disabled={false}
        style={
          Array [
            Object {
              "backgroundColor": "#A9A9B8",
              "borderRadius": 9999,
              "height": 10,
              "width": 10,
            },
          ]
        }
      />
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<RadioGroup /> <RadioGroup.Radio /> Snapshots should match snapshot with default radio 2`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback
    disabled={false}
  >
    <View
      checked={false}
      disabled={false}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderColor": "#A9A9B8",
            "borderRadius": 9999,
            "borderStyle": "solid",
            "borderWidth": 2,
            "height": 20,
            "justifyContent": "center",
            "width": 20,
          },
          Object {},
        ]
      }
    >
      <View
        checked={false}
        disabled={false}
        style={
          Array [
            Object {
              "backgroundColor": "#A9A9B8",
              "borderRadius": 9999,
              "height": 10,
              "width": 10,
            },
          ]
        }
      />
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<RadioGroup /> <RadioGroup.Radio /> Snapshots should match snapshot with default radio pressed 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback
    disabled={false}
  >
    <View
      checked={false}
      disabled={false}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderColor": "#A9A9B8",
            "borderRadius": 9999,
            "borderStyle": "solid",
            "borderWidth": 2,
            "height": 20,
            "justifyContent": "center",
            "width": 20,
          },
          Object {},
        ]
      }
      testID="radio"
    >
      <View
        checked={false}
        disabled={false}
        style={
          Array [
            Object {
              "backgroundColor": "#A9A9B8",
              "borderRadius": 9999,
              "height": 10,
              "width": 10,
            },
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "borderColor": "#FDE5E2",
              "borderRadius": 9999,
              "borderStyle": "solid",
              "borderWidth": 8,
              "height": 36,
              "opacity": 0.75,
              "position": "absolute",
              "width": 36,
            },
          ]
        }
      />
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<RadioGroup /> <RadioGroup.Radio /> Snapshots should match snapshot with disabled radio 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback
    disabled={true}
  >
    <View
      checked={false}
      disabled={true}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderColor": "#C5C5D6",
            "borderRadius": 9999,
            "borderStyle": "solid",
            "borderWidth": 2,
            "height": 20,
            "justifyContent": "center",
            "width": 20,
          },
          Object {},
        ]
      }
    >
      <View
        checked={false}
        disabled={true}
        style={
          Array [
            Object {
              "backgroundColor": "#C5C5D6",
              "borderRadius": 9999,
              "height": 10,
              "width": 10,
            },
          ]
        }
      />
    </View>
  </TouchableWithoutFeedback>
</View>
`;
